[package]
name = "radio-browser-api"
version = "0.2.0"
edition = "2024"
description = "Rust client for RadioBrowser API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.68"
lru = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.5.22"
tokio-test = "0.4"